# stars

./: .cproject  .gitignore  .project  CMakeLists.txt  INSTALL  Makefile  README  TODO.txt  config.h.in  doxy.conf  stars.kdev4
oldsim/: AvailabilityStatistics.cpp  AvailabilityStatistics.hpp  CMakeLists.txt  Distributions.cpp  FailureGenerator.cpp  FailureGenerator.hpp  JobStatistics.cpp  JobStatistics.hpp  LibStarsStatistics.cpp  LibStarsStatistics.hpp  MemoryManager.hpp  PerfectScheduler.cpp  PerfectScheduler.hpp  PerformanceStatistics.cpp  PerformanceStatistics.hpp  Properties.cpp  Properties.hpp  SimAppDatabase.cpp  SimAppDatabase.hpp  SimTask.cpp  SimTask.hpp  SimulationCase.hpp  Simulator.cpp  Simulator.hpp  SlownessStatistics.cpp  SlownessStatistics.hpp  StarsNode.cpp  StarsNode.hpp  TrafficStatistics.cpp  TrafficStatistics.hpp
oldsim/cases/: RequestGenerator.cpp  RequestGenerator.hpp  dispatcher.cpp  manySearches.cpp  structure.cpp
sim/: AvailabilityStatistics.cpp  CMakeLists.txt  Distributions.cpp  Distributions.hpp  FailureGenerator.cpp  FailureGenerator.hpp  LibStarsStatistics.cpp  LibStarsStatistics.hpp  MemoryManager.cpp  MemoryManager.hpp  PeerCompNode.cpp  PeerCompNode.hpp  PeerCompStatistics.cpp  PeerCompStatistics.hpp  PerfectScheduler.cpp  PerformanceStatistics.cpp  PerformanceStatistics.hpp  Properties.cpp  Properties.hpp  SimAppDatabase.cpp  SimAppDatabase.hpp  SimTask.cpp  SimTask.hpp  SimulationCase.cpp  SimulationCase.hpp  Simulator.cpp  Simulator.hpp  StarsNode.cpp  StarsNode.hpp
sim/cases/: CMakeLists.txt  Dummy.cpp  PoissonProcess.cpp  Structure.cpp
sim/conf/: create_tree_example.conf  example.conf  poisson_process_example.conf
sim/simulations/: RequestGenerator.hpp  dispatcher.cpp
src/: CMakeLists.txt  ConfigurationManager.cpp  ConfigurationManager.hpp  main.cpp
src/Core/: BasicMsgExport.cpp  CMakeLists.txt  CommLayer.cpp  ConfigurationManager.cpp  Logger.cpp  LoggerExport.cpp  NetworkManager.cpp  Time.cpp  main.cpp  portable_binary_iarchive.cpp  portable_binary_oarchive.cpp
src/Database/: Database.cpp  TaskBagAppDatabase.cpp
src/ExecutionManager/: CMakeLists.txt  DescriptionFile.cpp  EDFScheduler.cpp  FCFSScheduler.cpp  LinearAvailabilityFunction.cpp  MinSlownessScheduler.cpp  MinStretchScheduler.cpp  Scheduler.cpp  SimpleScheduler.cpp  TaskMsgExport.cpp  UnixExecutionEnvironment.cpp
src/GlobalScheduler/: AvailabilityInformationExport.cpp  CMakeLists.txt  DeadlineDispatcher.cpp  DispatchMsgExport.cpp  MinSlownessDispatcher.cpp  MinStretchDispatcher.cpp  QueueBalancingDispatcher.cpp  QueueBalancingInfo.cpp  SimpleDispatcher.cpp  SlownessInformation.cpp  StretchInformation.cpp  TimeConstraintInfo.cpp
src/StructureManager/: CMakeLists.txt  ResourceNode.cpp  StructureMsgExport.cpp  StructureNode.cpp  TransactionMsg.cpp  ZoneDescription.cpp
src/SubmissionManager/: CMakeLists.txt  SubmissionMsgExport.cpp  SubmissionNode.cpp
src/WtUI/: CMakeLists.txt  WtUI.cpp
src/lib/: CMakeLists.txt
src/lib/Core/: CMakeLists.txt  CommLayer.cpp  ConfigurationManager.cpp  Logger.cpp  NetworkManager.cpp  Time.cpp  main.cpp
src/lib/Database/: CMakeLists.txt  Database.cpp  TaskBagAppDatabase.cpp
src/lib/ExecutionManager/: DescriptionFile.cpp  EDFScheduler.cpp  FCFSScheduler.cpp  MinSlownessScheduler.cpp  Scheduler.cpp  SimpleScheduler.cpp  Task.cpp  TaskMsgExport.cpp  UnixExecutionEnvironment.cpp
src/lib/GlobalScheduler/: BasicAvailabilityInfo.cpp  (+9 more)
src/oldsim/: AvailabilityStatistics.cpp  AvailabilityStatistics.hpp  CMakeLists.txt  CentralizedScheduler.cpp  CentralizedScheduler.hpp  Distributions.cpp  Distributions.hpp  FailureGenerator.cpp  FailureGenerator.hpp  LibStarsStatistics.cpp  LibStarsStatistics.hpp  MemoryManager.cpp  MemoryManager.hpp  MsgpackArchive.hpp  NetworkInterface.cpp  NetworkInterface.hpp  PerfectScheduler.cpp  PerfectScheduler.hpp  PerformanceStatistics.cpp  PerformanceStatistics.hpp  PolicyFactory.cpp  PolicyFactory.hpp  Properties.cpp  Properties.hpp  RescheduleMsg.hpp  SignalException.cpp  SignalException.hpp  SimAppDatabase.cpp  SimAppDatabase.hpp  SimOverlayBranch.cpp  SimOverlayBranch.hpp  SimOverlayLeaf.cpp  SimOverlayLeaf.hpp  SimTask.cpp  SimTask.hpp  SimulationCase.cpp  SimulationCase.hpp  Simulator.cpp  Simulator.hpp  SlaveLocalScheduler.cpp  (+6 more)
src/performance/: AggregationTest.hpp  CMakeLists.txt  DPAvailabilityInfoTest.cpp  FSPAvailabilityInfoTest.cpp  FourSPAvailInfo.hpp  FourScalarParamsPT.cpp  IBPAvailabilityInfoTest.cpp  MMPAvailabilityInfoTest.cpp  MSPAvailabilityInfoTest.cpp  TwoSPAvailInfo.hpp  TwoScalarParamsPT.cpp  fsp_clustering.cpp  main.cpp
src/sim/: CMakeLists.txt  Distributions.cpp  Distributions.hpp  LibStarsStatistics.cpp  LibStarsStatistics.hpp  MemoryManager.cpp  MemoryManager.hpp  PerformanceStatistics.cpp  PerformanceStatistics.hpp  Properties.cpp  Properties.hpp  RequestGenerator.cpp  RequestGenerator.hpp  SimAppDatabase.cpp  SimAppDatabase.hpp  SimOverlayBranch.cpp  SimOverlayLeaf.hpp  SimTask.cpp  SimTask.hpp  SimulationCase.cpp  SimulationCase.hpp  Simulator.cpp  Simulator.hpp  StarsNode.cpp  StarsNode.hpp
src/sweeper/: CMakeLists.txt  SimulationsFile.cpp  daemon.cpp  main.cpp  sweeper.cpp
src/test/: CMakeLists.txt  CheckMsg.hpp  TestHost.hpp  TestSuite.cpp
src/tools/: CMakeLists.txt  aggrtest.cpp  cdf.cpp  gdbserverwrapper.cpp  slowness_by_time.rb  sweeperdaemon.cpp
src/util/: MemoryManager.cpp  SignalException.cpp
test/: CMakeLists.txt  CheckMsg.hpp  PeerCompLibTest.logconf  TestHost.hpp  TestSuite.cpp
test/Core/: CommunicationTest.cpp  SerializableBatch.cpp  SerializableBatch.hpp  SerializationTest.cpp
test/Database/: DatabaseTest.cpp
test/ExecutionManager/: CMakeLists.txt  ExecutionMessagesTest.cpp  SchedulerTest.cpp  TestTask.cpp  TestTask.hpp
test/GlobalScheduler/: AggregationTest.hpp  BasicAvailabilityInfoTest.cpp  CMakeLists.txt  DispatcherTest.cpp  QueueBalancingInfoTest.cpp  SlownessInformationTest.cpp  StretchInformationTest.cpp  TimeConstraintInfoTest.cpp
test/StructureManager/: CMakeLists.txt  StructureMessagesTest.cpp
test/testTask/: description.conf
(+308 files in other folders)
